--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,25 +1,27 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java#apache-maven-with-a-settings-path
+name: Master Branch
 
-name: Maven Package
-
-on: [push]
+on:
+  push:
+    branches:
+      - 'master'
 
 jobs:
 
   test:
-    name: Unit Test
+    name: Test - Units & Integrations
     runs-on: ubuntu-18.04
 
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 15
+      - name: Set up JDK 14
         uses: actions/setup-java@v1
         with:
-          java-version: 1.15
+          java-version: 14.0.2
       - name: Maven Package
         run: mvn -B clean package -DskipTests
       - name: Maven Verify
-        run: mvn -B clean verify
+        run: mvn -B clean verify -Pintegration-test
         env:
           GITHUB_TOKEN: ${{ github.token }}
