--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,11 +1,12 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java#apache-maven-with-a-settings-path
-name: Master Branch
+name: CI
 
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
+      - 'release-*'
 
 jobs:
 
