--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          zip -r pdf-converter-v1.0.0 dist/* 
+          zip -r pdf-converter dist/* 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
