--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -9,28 +9,15 @@ on:
       - 'release-*'
 
 jobs:
-
-  test:
-    name: Test - Units & Integrations
-    runs-on: ubuntu-18.04
-
+  build:
+    name: Upload Release Asset
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 14
-        uses: actions/setup-java@v1
-        with:
-          java-version: 14.0.2
-      - name: Maven Package
-        run: mvn -B clean package -DskipTests
-      - name: Maven Verify
-        run: mvn -B clean verify -Pintegration-test
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          zip -r pdf-converter dist/* 
+          zip --junk-paths my-artifact README.md
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -48,6 +35,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./pdf-converter.zip
-          asset_name: pdf-converter.zip
+          asset_path: ./my-artifact.zip
+          asset_name: my-artifact.zip
           asset_content_type: application/zip
