--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -16,8 +16,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
-        run: |
-          zip --junk-paths pdf-converter dist/*
+      - uses: montudor/action-zip@v0.1.0
+        with:
+          args: zip -qq -r pdf-creator.zip dist
+      - uses: actions/upload-artifact@v2
+        with:
+          name: vendor.zip
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
