--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -7,38 +7,31 @@ on:
     branches:
       - 'main'
       - 'release-*'
-
 jobs:
   build:
-    name: Upload Release Asset
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Build project # This would actually build your project, using zip for an example artifact
-      - uses: montudor/action-zip@v0.1.0
-        with:
-          args: zip -qq -r pdf-creator.zip dist
-      - uses: actions/upload-artifact@v2
-        with:
-          name: vendor.zip
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./pdf-converter.zip
-          asset_name: pdf-converter.zip
-          asset_content_type: application/zip
+     - uses: actions/checkout@v2
+     - name: Set up JDK 15
+       uses: actions/setup-java@v1
+       with:
+         java-version: 1.8
+     - name: Cache Maven packages
+       uses: actions/cache@v2
+       with:
+         path: ~/.m2
+         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+         restore-keys: ${{ runner.os }}-m2
+     - name: Build with Maven
+       run: mvn -B package --file pom.xml
+  package_job:
+    runs-on: ubuntu-latest
+    steps:
+     - uses: actions/checkout@v2
+     - uses: actions/setup-java@v1
+     - run: mvn -B package --file pom.xml
+     - run: mkdir staging && cp target/*.jar staging
+     - uses: actions/upload-artifact@v2
+       with:
+         name: Package
+         path: staging
