--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - uses: actions/checkout@v2
-     - name: Set up JDK 15
+     - name: Set up JDK 14
        uses: actions/setup-java@v1
        with:
-         java-version: 1.8
+         java-version: 14
      - name: Cache Maven packages
        uses: actions/cache@v2
        with:
@@ -28,6 +28,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - uses: actions/checkout@v2
+     - name: Set up JDK 14
+       uses: actions/setup-java@v1
+       with:
+         java-version: 14
      - uses: actions/setup-java@v1
      - run: mvn -B package --file pom.xml
      - run: mkdir staging && cp target/*.jar staging
