--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -8,7 +8,7 @@ on:
       - 'main'
       - 'release-*'
 jobs:
-  build:
+  build_package:
     runs-on: ubuntu-latest
     steps:
      - uses: actions/checkout@v2
@@ -23,17 +23,8 @@ jobs:
          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
          restore-keys: ${{ runner.os }}-m2
      - name: Build with Maven
-       run: mvn -B package --file pom.xml
-  package_job:
-    runs-on: ubuntu-latest
-    steps:
-     - uses: actions/checkout@v2
-     - name: Set up JDK 14
-       uses: actions/setup-java@v1
-       with:
-         java-version: 14
      - run: mvn -B package --file pom.xml
-     - run: mkdir staging && cp target/*.jar staging
+     - run: mkdir staging && cp -R target/* staging
      - uses: actions/upload-artifact@v2
        with:
          name: Package
