--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -23,7 +23,7 @@ jobs:
          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
          restore-keys: ${{ runner.os }}-m2
      - name: Build with Maven
-     - run: mvn -B package --file pom.xml
+       run: mvn -B package --file pom.xml
      - run: mkdir staging && cp -R target/* staging
      - uses: actions/upload-artifact@v2
        with:
