--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,7 +24,7 @@ jobs:
          restore-keys: ${{ runner.os }}-m2
      - name: Build with Maven
        run: mvn -B package --file pom.xml
-     - run: mkdir staging && cp -R target/* staging
+     - run: mkdir staging && cp -R target/*.jar staging
      - uses: actions/upload-artifact@v2
        with:
          name: Package
