--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -4,8 +4,10 @@
 name: Maven Test
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - 'main'
+      - 'release-*'
 
 jobs:
   build:
